Fix a couple color issues (#81)
* Fix illegible subgroup heading color

* Fix illegible count color in subject sidebar

* Remove unused code on subject page

--- a/solution/ui/regulations/css/scss/partials/_subjects.scss
+++ b/solution/ui/regulations/css/scss/partials/_subjects.scss
@@ -398,7 +398,7 @@
                         flex-direction: column;
 
                         .count {
-                            color: $secondary_text_color;
+                            /*color: $secondary_text_color;*/
                             font-size: $font-size-xs;
                             font-weight: 400;
                         }
